--- a/ios/mapsapp/Info.plist
+++ b/ios/mapsapp/Info.plist
@@ -34,6 +34,8 @@
     </array>
     <key>CFBundleVersion</key>
     <string>1</string>
+    <key>GMSApiKey</key>
+    <string>AIzaSyA5kb0VwVZHDF26Ynn7bAcckk8yVhc9GBA</string>
     <key>LSMinimumSystemVersion</key>
     <string>12.0</string>
     <key>LSRequiresIPhoneOS</key>
